# Copyright (c) 2021-2022, NVIDIA CORPORATION.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[build-system]
requires = [
    "wheel",
    "ninja",
    "setuptools",
    "scikit-build>=0.13.1",
    "cmake>=3.22.1,!=3.23.0,!=3.25.0",
]

[tool.pytest.ini_options]
addopts = "--capture=sys"


[tool.black]
line-length = 79
target-version = ["py36"]
include = '\.py?$'
exclude = '''
/(
    \.eggs |
    \.git |
    \.mypy_cache |
    \.tox |
    \.venv |
    _build |
    buck-out |
    build |
    dist
)/
'''

[tool.mypy]
python_version = "3.10"

pretty = true
show_error_codes = true
show_error_context = true
show_column_numbers = true

namespace_packages = true
ignore_missing_imports = false

disallow_any_unimported = true
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = false
disallow_any_generics = true
disallow_subclassing_any = true

disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true

warn_redundant_casts = true
warn_unused_ignores = false
warn_no_return = true
warn_return_any = false
warn_unreachable = true

ignore_errors = false

allow_untyped_globals = false
allow_redefinition = false
implicit_reexport = true
strict_equality = true

warn_unused_configs = true

[[tool.mypy.overrides]]
# ignore auto-generated files
# or files depending on auto-generated field
# legate files need to be listed here for now
# since they are included in the type check
module = [
  "cunumeric.install_info",
  "cunumeric._version",
  "legate._version",
  "legate.__main__",
  "legate.install_info",
]
ignore_errors = true
