# Copyright (c) 2021-2022, NVIDIA CORPORATION.

[versioneer]
VCS = git
style = pep440
versionfile_source = cunumeric/_version.py
versionfile_build = cunumeric/_version.py
tag_prefix = v
parentdir_prefix = cunumeric-

[flake8]
exclude = __init__.py
ignore =
    # line break before binary operator
    W503
    # whitespace before :
    E203
    # undefined, or defined from star imports
    F405

[isort]
line_length=79
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
combine_as_imports=True
order_by_type=True
known_third_party=
    numpy
known_legion=
    legion_cffi
    legion_top
known_first_party=
    cunumeric
default_section=THIRDPARTY
sections=FUTURE,STDLIB,THIRDPARTY,LEGION,FIRSTPARTY,LOCALFOLDER
skip=
    .eggs
    .git
    .mypy_cache
    .tox
    .venv
    _build
    build
    dist
    legion
    __init__.py

[options]
packages = find:
install_requires =
    numpy>=1.22
    # TODO: Add rest of install dependencies
python_requires = >=3.9,!=3.9.7
